Добавил аннотации OpenApi к роутам (часть 2)
