# app/Http/Controllers/Api/V1/ColumnsController.php
@@ -29,47 +29,27 @@ class ColumnsController extends Controller
 {
     public function getColumns(string $nameTable)
     {
-        switch ($nameTable) {
-            case Tables::ApiLimit->value:
-                return ApiResponse::success(__('api.table_column_data', ['nameTable'=>$nameTable]), (object)['columns' => ApiLimit::columnLabels()]);
-            case Tables::Card->value:
-                return ApiResponse::success(__('api.table_column_data', ['nameTable'=>$nameTable]), (object)['columns' => Card::columnLabels()]);
-            case Tables::Cost->value:
-                return ApiResponse::success(__('api.table_column_data', ['nameTable'=>$nameTable]), (object)['columns' => Cost::columnLabels()]);
-            case Tables::Currency->value:
-                return ApiResponse::success(__('api.table_column_data', ['nameTable'=>$nameTable]), (object)['columns' => Currency::columnLabels()]);
-            case Tables::Deck->value:
-                return ApiResponse::success(__('api.table_column_data', ['nameTable'=>$nameTable]), (object)['columns' => Deck::columnLabels()]);
-            case Tables::DeckTopic->value:
-                return ApiResponse::success(__('api.table_column_data', ['nameTable'=>$nameTable]), (object)['columns' => DeckTopic::columnLabels()]);
-            case Tables::Example->value:
-                return ApiResponse::success(__('api.table_column_data', ['nameTable'=>$nameTable]), (object)['columns' => Example::columnLabels()]);
-            case Tables::HistoryPurchase->value:
-                return ApiResponse::success(__('api.table_column_data', ['nameTable'=>$nameTable]), (object)['columns' => HistoryPurchase::columnLabels()]);
-            case Tables::Language->value:
-                return ApiResponse::success(__('api.table_column_data', ['nameTable'=>$nameTable]), (object)['columns' => Language::columnLabels()]);
-            case Tables::Question->value:
-                return ApiResponse::success(__('api.table_column_data', ['nameTable'=>$nameTable]), (object)['columns' => Question::columnLabels()]);
-            case Tables::QuestionAnswer->value:
-                return ApiResponse::success(__('api.table_column_data', ['nameTable'=>$nameTable]), (object)['columns' => QuestionAnswer::columnLabels()]);
-            case Tables::Tariff->value:
-                return ApiResponse::success(__('api.table_column_data', ['nameTable'=>$nameTable]), (object)['columns' => Tariff::columnLabels()]);
-            case Tables::Test->value:
-                return ApiResponse::success(__('api.table_column_data', ['nameTable'=>$nameTable]), (object)['columns' => Test::columnLabels()]);
-            case Tables::Timezone->value:
-                return ApiResponse::success(__('api.table_column_data', ['nameTable'=>$nameTable]), (object)['columns' => Timezone::columnLabels()]);
-            case Tables::Topic->value:
-                return ApiResponse::success(__('api.table_column_data', ['nameTable'=>$nameTable]), (object)['columns' => Topic::columnLabels()]);
-            case Tables::User->value:
-                return ApiResponse::success(__('api.table_column_data', ['nameTable'=>$nameTable]), (object)['columns' => User::columnLabels()]);
-            case Tables::UserTestAnswer->value:
-                return ApiResponse::success(__('api.table_column_data', ['nameTable'=>$nameTable]), (object)['columns' => UserTestAnswer::columnLabels()]);
-            case Tables::UserTestResult->value:
-                return ApiResponse::success(__('api.table_column_data', ['nameTable'=>$nameTable]), (object)['columns' => UserTestResult::columnLabels()]);
-            case Tables::VisitedDeck->value:
-                return ApiResponse::success(__('api.table_column_data', ['nameTable'=>$nameTable]), (object)['columns' => VisitedDeck::columnLabels()]);
-            default:
-                return ApiResponse::error(__('api.table_not_found', ['nameTable' => $nameTable]));
-        }
+        return match ($nameTable) {
+            Tables::ApiLimit->value => ApiResponse::success(__('api.table_column_data', ['nameTable' => $nameTable]), (object)['columns' => ApiLimit::columnLabels()]),
+            Tables::Card->value => ApiResponse::success(__('api.table_column_data', ['nameTable' => $nameTable]), (object)['columns' => Card::columnLabels()]),
+            Tables::Cost->value => ApiResponse::success(__('api.table_column_data', ['nameTable' => $nameTable]), (object)['columns' => Cost::columnLabels()]),
+            Tables::Currency->value => ApiResponse::success(__('api.table_column_data', ['nameTable' => $nameTable]), (object)['columns' => Currency::columnLabels()]),
+            Tables::Deck->value => ApiResponse::success(__('api.table_column_data', ['nameTable' => $nameTable]), (object)['columns' => Deck::columnLabels()]),
+            Tables::DeckTopic->value => ApiResponse::success(__('api.table_column_data', ['nameTable' => $nameTable]), (object)['columns' => DeckTopic::columnLabels()]),
+            Tables::Example->value => ApiResponse::success(__('api.table_column_data', ['nameTable' => $nameTable]), (object)['columns' => Example::columnLabels()]),
+            Tables::HistoryPurchase->value => ApiResponse::success(__('api.table_column_data', ['nameTable' => $nameTable]), (object)['columns' => HistoryPurchase::columnLabels()]),
+            Tables::Language->value => ApiResponse::success(__('api.table_column_data', ['nameTable' => $nameTable]), (object)['columns' => Language::columnLabels()]),
+            Tables::Question->value => ApiResponse::success(__('api.table_column_data', ['nameTable' => $nameTable]), (object)['columns' => Question::columnLabels()]),
+            Tables::QuestionAnswer->value => ApiResponse::success(__('api.table_column_data', ['nameTable' => $nameTable]), (object)['columns' => QuestionAnswer::columnLabels()]),
+            Tables::Tariff->value => ApiResponse::success(__('api.table_column_data', ['nameTable' => $nameTable]), (object)['columns' => Tariff::columnLabels()]),
+            Tables::Test->value => ApiResponse::success(__('api.table_column_data', ['nameTable' => $nameTable]), (object)['columns' => Test::columnLabels()]),
+            Tables::Timezone->value => ApiResponse::success(__('api.table_column_data', ['nameTable' => $nameTable]), (object)['columns' => Timezone::columnLabels()]),
+            Tables::Topic->value => ApiResponse::success(__('api.table_column_data', ['nameTable' => $nameTable]), (object)['columns' => Topic::columnLabels()]),
+            Tables::User->value => ApiResponse::success(__('api.table_column_data', ['nameTable' => $nameTable]), (object)['columns' => User::columnLabels()]),
+            Tables::UserTestAnswer->value => ApiResponse::success(__('api.table_column_data', ['nameTable' => $nameTable]), (object)['columns' => UserTestAnswer::columnLabels()]),
+            Tables::UserTestResult->value => ApiResponse::success(__('api.table_column_data', ['nameTable' => $nameTable]), (object)['columns' => UserTestResult::columnLabels()]),
+            Tables::VisitedDeck->value => ApiResponse::success(__('api.table_column_data', ['nameTable' => $nameTable]), (object)['columns' => VisitedDeck::columnLabels()]),
+            default => ApiResponse::error(__('api.table_not_found', ['nameTable' => $nameTable])),
+        };
     }
 }
